[package]
authors = ["chaos-hj"]
edition = "2018"
name = "concurrency"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = {version = '0.8.0'}
crossbeam-channel = {version = '0.5.1'}
rand = {version = '^0.8.3'}
