[package]
authors = ["chaos-hj"]
edition = "2018"
name = "concurrency"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = {version = '0.8.0'}
crossbeam-channel = {version = '0.5.1'}
image = {version = '0.23.14'}
lazy_static = {version = '1.4.0'}
num = {version = '0.4.0'}
num_cpus = {version = "1.13.0"}
rand = {version = '^0.8.3'}
threadpool = {version = '1.8.1'}
