[package]
name = "hello_macro"
version = "0.1.0"
authors = ["kentory <1935624920@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["nightly"] }
syn = {version = "1.0.57", features = ["full","fold"]}
quote = "1.0"
